# Quake-2

./: .gitignore  CMakeLists.txt  deploy.cmd
client/: cl_input.c
ref_gl/: gl_rmain.c
win32/: sys_win.c
